# 2-if-for-array

./: .gitignore  CMakeLists.txt  Makefile  README.md  ascii.c  ascii.md  calculator.c  calculator.md  change.c  change.md  cube.c  cube.md  equation.c  equation.md  factorial.c  factorial.md  flip.c  flip.md  gray.c  gray.md  homo.c  inverse.c  inverse.md  light.c  light.md  money.c  money.md  once.c  once.md  pi.c  pi.md  planck.c  planck.md  quine.c  quine.md  statistic.c  statistic.md  statistics.c  statistics.md  sum.c  (+7 more)
test/: calculator.in  calculator.out  money.in  money.out  once.in  statictics.in  statistics.out
testdata/: ascii.out  equation.out  pi.out  plank.out  time.in  time.out  weekday.in
