cmake_minimum_required(VERSION 3.20)
project(2-if-for-array C)

set(CMAKE_C_STANDARD 11)

add_executable(cube cube.c)
add_executable(factorial factorial.c)
add_executable(money money.c)
add_executable(once once.c)
add_executable(calculator calculator.c)
add_executable(flip flip.c)
add_executable(statistics statistics.c)